--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>yt-dlp GUI Generator</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+      // Polyfill for process.env to prevent crashes in browser environment
+      window.process = window.process || { env: { API_KEY: '' } };
+      
       tailwind.config = {
         theme: {
           extend: {
@@ -58,5 +61,7 @@
 </head>
   <body>
     <div id="root"></div>
+    <!-- Entry point for Vite/Build tools -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
